--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@mantine/core": "^6.0.9",
+    "@mantine/ds": "^6.0.9",
+    "@mantine/hooks": "^6.0.9",
+    "@mantine/modals": "^6.0.9",
+    "@mantine/notifications": "^6.0.9",
+    "@mantine/prism": "^6.0.9",
+    "@mantine/rte": "^5.10.5",
+    "@tabler/icons-react": "^2.17.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tabler-icons-react": "^1.56.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
